--- a/Christmas Song Recommender_Attempt #1.ipynb
+++ b/Christmas Song Recommender_Attempt #1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 1,
    "id": "dd291fc7",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 2,
    "id": "e7edcda7",
    "metadata": {},
    "outputs": [
@@ -82,11 +82,11 @@
        "      <td>3</td>\n",
        "      <td>A# major</td>\n",
        "      <td>new_holiday_songs</td>\n",
-       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437</td>\n",
+       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e...</td>\n",
        "      <td>Silver Bells</td>\n",
        "      <td>Johnny Mathis</td>\n",
        "      <td>Merry Christmas</td>\n",
-       "      <td>https://i.scdn.co/image/b878b9e27201163be07e746657280ab24802839e</td>\n",
+       "      <td>https://i.scdn.co/image/b878b9e27201163be07e74...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -106,11 +106,11 @@
        "      <td>4</td>\n",
        "      <td>A major</td>\n",
        "      <td>new_holiday_songs</td>\n",
-       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437</td>\n",
+       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e...</td>\n",
        "      <td>White Christmas</td>\n",
        "      <td>Bing Crosby</td>\n",
        "      <td>White Christmas</td>\n",
-       "      <td>https://i.scdn.co/image/3bb0daf5f87a737ce67ace001f240a82094de467</td>\n",
+       "      <td>https://i.scdn.co/image/3bb0daf5f87a737ce67ace...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -130,11 +130,11 @@
        "      <td>3</td>\n",
        "      <td>F# major</td>\n",
        "      <td>new_holiday_songs</td>\n",
-       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437</td>\n",
+       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e...</td>\n",
        "      <td>The Christmas Waltz</td>\n",
        "      <td>Tony Bennett</td>\n",
-       "      <td>A Swingin' Christmas Featuring The Count Basie Big Band</td>\n",
-       "      <td>https://i.scdn.co/image/96aa4fb09e7fe9d38599c8d9d475eb6d675e2e87</td>\n",
+       "      <td>A Swingin' Christmas Featuring The Count Basie...</td>\n",
+       "      <td>https://i.scdn.co/image/96aa4fb09e7fe9d38599c8...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -154,11 +154,11 @@
        "      <td>4</td>\n",
        "      <td>A major</td>\n",
        "      <td>new_holiday_songs</td>\n",
-       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437</td>\n",
+       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e...</td>\n",
        "      <td>Stop the Cavalry</td>\n",
        "      <td>Jona Lewie</td>\n",
        "      <td>On The Other Hand There's A Fist (Remastered)</td>\n",
-       "      <td>https://i.scdn.co/image/50c0ea35cacbf7c5d495c71e0d2e789af97cd2c2</td>\n",
+       "      <td>https://i.scdn.co/image/50c0ea35cacbf7c5d495c7...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -178,11 +178,11 @@
        "      <td>4</td>\n",
        "      <td>F# major</td>\n",
        "      <td>new_holiday_songs</td>\n",
-       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437</td>\n",
+       "      <td>https://mosaic.scdn.co/640/5f79f928a45b878579e...</td>\n",
        "      <td>I Don't Want to Go Home for Christmas</td>\n",
        "      <td>Independent Counsel of Funk</td>\n",
        "      <td>I Don't Want to Go Home for Christmas</td>\n",
-       "      <td>https://i.scdn.co/image/77eb7c17cafe55037a1ab279b7d79ad4624e53fa</td>\n",
+       "      <td>https://i.scdn.co/image/77eb7c17cafe55037a1ab2...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -211,12 +211,12 @@
        "3       178680               4   A major  new_holiday_songs   \n",
        "4       203404               4  F# major  new_holiday_songs   \n",
        "\n",
-       "                                                                                                                                                                                  playlist_img  \\\n",
-       "0  https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437   \n",
-       "1  https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437   \n",
-       "2  https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437   \n",
-       "3  https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437   \n",
-       "4  https://mosaic.scdn.co/640/5f79f928a45b878579e1fffc9e4aefb362ca53fd939adaa29092810cc1c44965b5a5781e38ee7e65d95f2279ad49512299646dadf9e3e11c09c94c5ee06f3ddadf59ee24504fc02bfe205945807a2437   \n",
+       "                                        playlist_img  \\\n",
+       "0  https://mosaic.scdn.co/640/5f79f928a45b878579e...   \n",
+       "1  https://mosaic.scdn.co/640/5f79f928a45b878579e...   \n",
+       "2  https://mosaic.scdn.co/640/5f79f928a45b878579e...   \n",
+       "3  https://mosaic.scdn.co/640/5f79f928a45b878579e...   \n",
+       "4  https://mosaic.scdn.co/640/5f79f928a45b878579e...   \n",
        "\n",
        "                              track_name                  artist_name  \\\n",
        "0                           Silver Bells                Johnny Mathis   \n",
@@ -225,24 +225,24 @@
        "3                       Stop the Cavalry                   Jona Lewie   \n",
        "4  I Don't Want to Go Home for Christmas  Independent Counsel of Funk   \n",
        "\n",
-       "                                                album_name  \\\n",
-       "0                                          Merry Christmas   \n",
-       "1                                          White Christmas   \n",
-       "2  A Swingin' Christmas Featuring The Count Basie Big Band   \n",
-       "3            On The Other Hand There's A Fist (Remastered)   \n",
-       "4                    I Don't Want to Go Home for Christmas   \n",
+       "                                          album_name  \\\n",
+       "0                                    Merry Christmas   \n",
+       "1                                    White Christmas   \n",
+       "2  A Swingin' Christmas Featuring The Count Basie...   \n",
+       "3      On The Other Hand There's A Fist (Remastered)   \n",
+       "4              I Don't Want to Go Home for Christmas   \n",
        "\n",
-       "                                                          album_img  \n",
-       "0  https://i.scdn.co/image/b878b9e27201163be07e746657280ab24802839e  \n",
-       "1  https://i.scdn.co/image/3bb0daf5f87a737ce67ace001f240a82094de467  \n",
-       "2  https://i.scdn.co/image/96aa4fb09e7fe9d38599c8d9d475eb6d675e2e87  \n",
-       "3  https://i.scdn.co/image/50c0ea35cacbf7c5d495c71e0d2e789af97cd2c2  \n",
-       "4  https://i.scdn.co/image/77eb7c17cafe55037a1ab279b7d79ad4624e53fa  \n",
+       "                                           album_img  \n",
+       "0  https://i.scdn.co/image/b878b9e27201163be07e74...  \n",
+       "1  https://i.scdn.co/image/3bb0daf5f87a737ce67ace...  \n",
+       "2  https://i.scdn.co/image/96aa4fb09e7fe9d38599c8...  \n",
+       "3  https://i.scdn.co/image/50c0ea35cacbf7c5d495c7...  \n",
+       "4  https://i.scdn.co/image/77eb7c17cafe55037a1ab2...  \n",
        "\n",
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 3,
    "id": "73dd6b0b",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 4,
    "id": "1c440bb1",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 5,
    "id": "b5063b1e",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 6,
    "id": "1c1f87ae",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 7,
    "id": "3200e696",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 8,
    "id": "46054f96",
    "metadata": {},
    "outputs": [],
@@ -370,27 +370,29 @@
      "output_type": "stream",
      "text": [
       "Merry Christmas! Enter the name of a Christmas song (type 'exit' to quit): jingle bells\n",
-      "Enter danceability category ('low', 'medium', 'high'): medium\n",
-      "Recommended songs for 'jingle bells' with medium danceability:\n",
-      "['you and me and christmas' 'leann rimes'\n",
-      " \"it's christmas, eve (original motion picture soundtrack)\"]\n",
-      "['mary, did you know?' 'zara larsson'\n",
-      " 'the star - original motion picture soundtrack']\n",
-      "['winter wonderland' 'hannah kerr' 'christmas eve in bethlehem']\n",
-      "['where are you christmas?' 'pentatonix' 'christmas is here!']\n",
-      "['the christmas waltz' 'she & him' 'a very she & him christmas']\n",
-      "['last christmas' 'wham!' 'christmas hits']\n",
-      "[\"rockin' around the christmas tree\" 'pentatonix' 'christmas is here!']\n",
-      "['christmas in hollis' 'run–d.m.c.' 'christmas hits']\n",
-      "['this christmas' 'chris brown' 'christmas hits']\n",
-      "['the christmas song (merry christmas to you)' 'nat king cole'\n",
-      " \"christmas number 1's\"]\n",
-      "['all i want for christmas is you' 'mariah carey' 'merry christmas']\n",
-      "['just like christmas' 'low' 'christmas']\n",
-      "['home for christmas' 'maria mena' 'christmas hits']\n",
-      "['merry christmas everyone' \"shakin' stevens\" 'christmas hits']\n",
-      "['christmas is just around the corner (from \"cranberry christmas\")'\n",
-      " 'barry manilow' 'in the swing of christmas']\n"
+      "Enter danceability category ('low', 'medium', 'high'): low\n",
+      "Recommended songs for 'jingle bells' with low danceability:\n",
+      "[\"it's the most wonderful time of the year\" 'david campbell'\n",
+      " \"baby it's christmas\"]\n",
+      "[\"it's the most wonderful time of the year\" 'andy williams'\n",
+      " 'christmas hits']\n",
+      "['deck the halls' 'mark vincent' 'the most wonderful time of the year']\n",
+      "['christmas time is here again' 'weeping willows'\n",
+      " 'christmas time has come']\n",
+      "[\"baby! it's christmas\" 'jessie james decker' \"baby! it's christmas\"]\n",
+      "['christmas every day' 'david archuleta' 'winter in the air']\n",
+      "['christmas time' 'backstreet boys' 'christmas hits']\n",
+      "['my only wish (this year)' 'britney spears' 'christmas hits']\n",
+      "['christmas (baby please come home)' 'mariah carey' 'merry christmas']\n",
+      "['christmas (baby please come home)' 'darlene love' 'christmas hits']\n",
+      "[\"baby, it's cold outside\" 'lydia liza' \"baby, it's cold outside\"]\n",
+      "['santa baby' 'samantha jade' 'the magic of christmas']\n",
+      "['santa bring my baby back (to me)' 'elvis presley'\n",
+      " \"elvis' christmas album\"]\n",
+      "['santa baby (with henri rené & his orchestra)' 'eartha kitt'\n",
+      " 'christmas hits']\n",
+      "['christmas time is here - vocal' 'vince guaraldi trio'\n",
+      " 'a charlie brown christmas [2012 remastered & expanded edition]']\n"
      ]
     }
    ],
